added proper deffered stuff, upgraded to 2.7

--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <h1>Shoutout!</h1>
 
 {% for shout in shouts %}
-<div>{{shout.message}} BY: {{shout.author}}</div>
+<div>{{shout.message}} <b>-- {{shout.author}}</b></div>
 {% endfor %}
 
 <form action="" method="post" accept-charset="utf-8">
